kubernetes/mybackend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackend-deployment
  labels:
    component: backend
    app: my-app

spec:
  template:
    metadata:
      name: mybackend-pod
      labels:
        component: backend
        app: my-app
    spec:
      containers:
        - name: mybackend
          image: kamsta97/mybackend
          ports:
            - containerPort: 5000
  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: backend
