kubernetes/myfrontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myfrontend-deployment
    labels:
        app: my-app
        type: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: my-app
                type: frontend

        spec:
            containers:
                - name: myfrontend
                  image: kamsta97/myfrontend
                  stdin: true
                  ports:
                    - containerPort: 3000

    replicas: 3
    selector:
        matchLabels:
            app: my-app
            type: frontend
