kubernetes/mynginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynginx-deployment
  labels:
    component: web
    app: my-app

spec:
  template:
    metadata:
      name: mynginx-pod
      labels:
        component: web
        app: my-app
    spec:
      containers:
        - name: mynginx-container
          image: kamsta97/mynginx

  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: web
