kubernetes/mynginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx-pod
  labels:
    component: web
    name: my-app

spec:
  containers:
    - name: mynginx
      image: kamsta97/mynginx
      ports:
        - containerPort: 80
