kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mypostgres-deployment
  labels:
    app: mypostgres
    component: postgres
    type: db
  
spec:
  template:
    metadata:
      name: mypostgres-pod
      labels:
        app: mypostgres
        component: postgres
        type: db
    spec:
      containers: 
      - name: mypostgres-container
        image: postgres:alpine
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgresvolume
      volumes:
      - name: postgresvolume
        persistentVolumeClaim:
          claimName: postgres-pvc
  replicas: 1
  selector:
    matchLabels:
      app: mypostgres
      component: postgres
      type: db
