kubernetes/postgres-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypostgres-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  
  selector:
    app: mypostgres
