kubernetes/postgres-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypostgres-node-port

spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30001

  selector:
    app: mypostgres
    component: postgres
